--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@vercel/analytics": "^1.1.1",
     "aos": "^3.0.0-beta.6",
     "next": "14.0.4",
     "react": "^18",
