--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@vercel/analytics": "^1.1.1",
     "aos": "^3.0.0-beta.6",
+    "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-lottie-player": "^1.5.6",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
