--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@vercel/analytics": "^1.1.1",
     "aos": "^3.0.0-beta.6",
+    "flowbite-react": "^0.7.2",
     "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-lottie-player": "^1.5.6",
+    "react-tabs": "^6.0.2",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
