--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@gsap/react": "^2.1.1",
     "@mui/material": "^5.15.11",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -19,12 +20,13 @@
     "flowbite-react": "^0.7.2",
     "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
-    "next": "14.0.4",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-lottie-player": "^1.5.6",
     "react-tabs": "^6.0.2",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
