--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
     "next": "^14.2.5",
+    "querystring": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-lottie-player": "^1.5.6",
     "react-tabs": "^6.0.2",
     "react-type-animation": "^3.2.0",
+    "swr": "^2.2.5",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
